New video scale, to load fast web

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
    <video autoplay loop muted id="bgvideo">
-      <source src="assets/video.mp4">
+      <source src="assets/1080-h.mp4">
    </video>
    <div class="options">
       <div class="option active" id="portfolio" ondblclick = "navigate(this)"
