--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body>
+<body onclick="changevideo()">
    <video autoplay loop muted id="video_1" class="bgvideo">
       <source src="assets/1080-h2.mp4">
    </video>
@@ -21,7 +21,7 @@
       <source src="assets/1080-h.mp4">
    </video>
    <div class="options">
-      <div class="option active" id="portfolio" ondblclick = "navigate(this)"
+      <div class="option active" id="portfolio" onclick = "navigate(this)"
          style="--optionBackground:url(assets/portfolio.png);">
          <div class="shadow"></div>
          <div class="label">
@@ -34,7 +34,7 @@
             </div>
          </div>
       </div>
-      <div class="option" id="kaze" ondblclick = "navigate(this)"
+      <div class="option" id="kaze" onclick = "navigate(this)"
          style="--optionBackground:url(assets/kaze.png);">
          <div class="shadow"></div>
          <div class="label">
@@ -47,7 +47,7 @@
             </div>
          </div>
       </div>
-      <div class="option" id="cofradia" ondblclick = "navigate(this)"
+      <div class="option" id="cofradia" onclick = "navigate(this)"
          style="--optionBackground:url(assets/cofradia.png);">
          <div class="shadow"></div>
          <div class="label">
@@ -60,7 +60,7 @@
             </div>
          </div>
       </div>
-      <div class="option" id="github" ondblclick = "navigate(this)"
+      <div class="option" id="github" onclick = "navigate(this)"
          style="--optionBackground:url(assets/github.jpg);">
          <div class="shadow"></div>
          <div class="label">
@@ -73,7 +73,7 @@
             </div>
          </div>
       </div>
-      <div class="option" id="linkedin" ondblclick = "navigate(this)"
+      <div class="option" id="linkedin" onclick = "navigate(this)"
          style="--optionBackground:url(assets/Linkedin.jpg);">
          <div class="shadow"></div>
          <div class="label">
@@ -104,7 +104,7 @@
                <path
                   d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z" />
             </svg></a>
-         <a onclick="change_video()" class="menu-item"><svg xmlns="http://www.w3.org/2000/svg" viewBox="-230 -160 850 900"
+         <a onclick="changevideo()" class="menu-item"><svg xmlns="http://www.w3.org/2000/svg" viewBox="-230 -160 850 900"
                fill="white">
                <path
                   d="M272 384c9.6-31.9 29.5-59.1 49.2-86.2l0 0c5.2-7.1 10.4-14.2 15.4-21.4c19.8-28.5 31.4-63 31.4-100.3C368 78.8 289.2 0 192 0S16 78.8 16 176c0 37.3 11.6 71.9 31.4 100.3c5 7.2 10.2 14.3 15.4 21.4l0 0c19.8 27.1 39.7 54.4 49.2 86.2H272zM192 512c44.2 0 80-35.8 80-80V416H112v16c0 44.2 35.8 80 80 80zM112 176c0 8.8-7.2 16-16 16s-16-7.2-16-16c0-61.9 50.1-112 112-112c8.8 0 16 7.2 16 16s-7.2 16-16 16c-44.2 0-80 35.8-80 80z" />
